--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,7 +14,8 @@
         "@fsapp/trpc": "workspace:*",
         "@trpc/server": "^11.4.4",
         "fastify": "^5.4.0",
-        "zod": "^3.25.76"
+        "zod": "^3.25.76",
+        "superjson": "^2.2.1"
     },
     "devDependencies": {
         "@types/node": "^20.19.10",
