--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -12,7 +12,8 @@
     },
     "dependencies": {
         "@trpc/client": "^11.4.4",
-        "@trpc/react-query": "^11.4.4"
+        "@trpc/react-query": "^11.4.4",
+        "superjson": "^2.2.1"
     },
     "devDependencies": {
         "typescript": "^5.6.2"
