--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,14 +11,19 @@
     },
     "dependencies": {
         "@fastify/cors": "^11.1.0",
+        "@fsapp/config": "workspace:*",
         "@fsapp/trpc": "workspace:*",
         "@trpc/server": "^11.4.4",
+        "dotenv": "^17.2.1",
+        "drizzle-orm": "^0.44.4",
         "fastify": "^5.4.0",
-        "zod": "^3.25.76",
-        "superjson": "^2.2.1"
+        "postgres": "^3.4.7",
+        "superjson": "^2.2.1",
+        "zod": "^3.25.76"
     },
     "devDependencies": {
         "@types/node": "^20.19.10",
+        "drizzle-kit": "^0.31.4",
         "tsx": "^4.20.3",
         "typescript": "^5.9.2"
     }
