--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -7,6 +7,11 @@
         ".": "./src/index.ts"
     },
     "dependencies": {
+        "dotenv": "^17.2.1",
+        "typescript": "^5.9.2",
         "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@types/node": "^24.2.1"
     }
 }
