--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,8 @@
 NODE_ENV=development
-PORT=4001
+PORT=4000
 HOST=0.0.0.0
 NEXT_PUBLIC_API_URL=http://localhost:4000
+POSTGRES_URL=postgres://postgres:postgres@localhost:5432/fullstack_app
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
