--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "baseUrl": ".",
     "module": "ESNext",
     "moduleResolution": "Bundler",
@@ -13,43 +9,22 @@
     "noEmit": true,
     "allowJs": true,
     "resolveJsonModule": true,
-    "types": [
-      "node"
-    ],
+    "types": ["node"],
     "plugins": [
       {
         "name": "next"
       }
     ],
     "paths": {
-      "@/*": [
-        "./*"
-      ],
-      "@fsapp/trpc": [
-        "../../packages/trpc/src"
-      ],
-      "@fsapp/trpc/*": [
-        "../../packages/trpc/src/*"
-      ],
-      "@fsapp/config": [
-        "../../packages/config/src"
-      ],
-      "@fsapp/server": [
-        "../../apps/server/src"
-      ],
-      "@fsapp/server/*": [
-        "../../apps/server/src/*"
-      ]
+      "@/*": ["./*"],
+      "@fsapp/trpc": ["../../packages/trpc/src"],
+      "@fsapp/trpc/*": ["../../packages/trpc/src/*"],
+      "@fsapp/config": ["../../packages/config/src"],
+      "@fsapp/server": ["../../apps/server/src"],
+      "@fsapp/server/*": ["../../apps/server/src/*"]
     },
     "incremental": true
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
